Added example code for classifying images